<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <!-- Background/Image -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/bg_image"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/bottomLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bg" />

    <!-- Close Button -->
    <androidx.cardview.widget.CardView
        android:id="@+id/closeButtonCard"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="#80000000"
        app:cardElevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/closeButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:contentDescription="@string/close_button"
            app:srcCompat="@drawable/ic_cross" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Gallery Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/galleryCard"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:contentDescription="@string/set_camera_logo"
                app:srcCompat="@drawable/baseline_image_24" />
        </androidx.cardview.widget.CardView>

        <!-- Logo Card (Center) -->
        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="50dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="#FF9800">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:contentDescription="@string/set_logo"
                app:srcCompat="@drawable/logo" />
        </androidx.cardview.widget.CardView>

        <!-- Camera Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cameraCard"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">

            <ImageView
                android:id="@+id/cardImg"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:contentDescription="@string/setting_camera"
                app:srcCompat="@drawable/baseline_camera_alt_24" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>